# zetteldev

./: .gitignore  cookiecutter.json  pixi.toml  pyproject.toml  settings.ini
.github/workflows/: devcontainer-release.yml
.nova/: Configuration.json
nbs/docs/: index.ipynb
ops/devcontainer/: Dockerfile.cpu  Dockerfile.cuda-12.4  README.md
ops/devcontainer/config/: fixuid.yml
ops/devcontainer/config/profile.d/: zdev-history.sh
ops/devcontainer/docs/: AGENTS.md  CLAUDE.md
ops/devcontainer/scripts/: fixuid-entrypoint.sh  zdev
ops/devcontainer/workflows/: devcontainer-release.yml
{{ cookiecutter.project_slug }}/: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  justfile  pixi.toml  pyproject.toml  settings.ini
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
{{ cookiecutter.project_slug }}/.zetteldev/: create_experiment.py  run_experiment.py  update_zetteldev_assets.sh  zdev-container.sh
{{ cookiecutter.project_slug }}/experiments/: _quarto.yaml  experiments.md
{{ cookiecutter.project_slug }}/gambols/: gambols.md
{{ cookiecutter.project_slug }}/infra/: infra.md
{{ cookiecutter.project_slug }}/paper/: index.qmd
